@@ -4,6 +4,9 @@
 
  Changes between 0.9.8h and 0.9.8i  [xx XXX xxxx]
 
+  *) Add support for Local Machine Keyset attribute in PKCS#12 files.
+     [Steve Henson]
+
   *) Fix BN_GF2m_mod_arr() top-bit cleanup code.
      [Huang Ying]
 
